Rename brand to Electricite Grappe

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>ELEC PRO – Électricien de Confiance</title>
+  <title>Électricité Grappe – Électricien de Confiance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Entreprise d'électricité générale : installation, rénovation, dépannage 7j/7. Électriciens qualifiés, interventions rapides et sécurisées." />
 
@@ -111,8 +111,8 @@
             <i class="fa-solid fa-bolt"></i>
           </div>
           <div>
-            <div class="text-sm font-bold tracking-[0.25em] uppercase text-electric">ELEC PRO</div>
-            <p class="text-xs text-slate-500 leading-tight">Électricité générale</p>
+            <div class="text-sm font-bold tracking-[0.25em] uppercase text-electric">ÉLECTRICITÉ GRAPPE</div>
+            <p class="text-xs text-slate-500 leading-tight">Entreprise d'électricité générale</p>
           </div>
         </a>
 
@@ -331,7 +331,7 @@
             Garantie, sécurité & transparence
           </p>
           <h2 class="text-2xl sm:text-3xl font-bold text-slate-900 mb-4">
-            Pourquoi choisir <span class="text-electric">ELEC PRO</span> pour vos travaux électriques&nbsp;?
+            Pourquoi choisir <span class="text-electric">Électricité Grappe</span> pour vos travaux électriques&nbsp;?
           </h2>
           <p class="text-sm sm:text-base text-slate-600 mb-6">
             Nous accompagnons particuliers et professionnels pour tous leurs projets électriques,
@@ -472,7 +472,7 @@
             <div class="flex gap-3">
               <i class="fa-solid fa-location-dot mt-1 text-electric"></i>
               <div>
-                <p class="font-semibold">ELEC PRO – Électricité Générale</p>
+                <p class="font-semibold">Électricité Grappe – Électricité Générale</p>
                 <p class="text-slate-600">12 rue des Artisans<br />00000 [Ville, Région]</p>
               </div>
             </div>
@@ -489,7 +489,7 @@
               <i class="fa-solid fa-envelope mt-1 text-electric"></i>
               <div>
                 <p class="font-semibold">E‑mail</p>
-                <a href="mailto:contact@elecpro.fr" class="text-slate-600 hover:text-electric">contact@elecpro.fr</a>
+                <a href="mailto:contact@electricitegrappe.fr" class="text-slate-600 hover:text-electric">contact@electricitegrappe.fr</a>
               </div>
             </div>
 
@@ -576,8 +576,8 @@
               <i class="fa-solid fa-bolt"></i>
             </div>
             <div>
-              <p class="text-xs font-bold tracking-[0.25em] uppercase">ELEC PRO</p>
-              <p class="text-[11px] text-slate-400">Entreprise d'électricité générale</p>
+              <p class="text-xs font-bold tracking-[0.25em] uppercase">ÉLECTRICITÉ GRAPPE</p>
+              <p class="text-[11px] text-slate-400">Spécialiste en électricité générale</p>
             </div>
           </div>
           <p class="text-slate-300 text-xs sm:text-sm">
@@ -610,7 +610,7 @@
       </div>
 
       <div class="flex flex-col sm:flex-row items-center justify-between gap-3 pt-4 text-[11px] text-slate-500">
-        <p>© <span id="year"></span> ELEC PRO – Tous droits réservés.</p>
+        <p>© <span id="year"></span> Électricité Grappe – Tous droits réservés.</p>
         <p>Site vitrine – Exemple de maquette UI/UX pour entreprise d’électricité générale.</p>
       </div>
     </div>
