Update copy for Electricite Grappe Champagnole

--- a/index.html
+++ b/index.html
@@ -147,11 +147,12 @@
               Électriciens qualifiés – Interventions sécurisées
             </p>
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold leading-tight mb-4">
-              Votre électricien de confiance à <span class="text-safety">[Votre Ville]</span>
+              Votre installateur électrique de confiance à <span class="text-safety">Champagnole</span>
             </h1>
             <p class="text-base sm:text-lg text-slate-100 max-w-xl mb-6">
-              Installation, rénovation et dépannage électrique pour particuliers, professionnels et industrie.
-              Interventions rapides, diagnostics précis et installations conformes aux normes en vigueur.
+              Pour garantir les performances optimales et la sécurité de votre installation électrique,
+              Électricité Grappe vous conseille des solutions sur mesure, adaptées à votre habitation ou à vos locaux professionnels.
+              Installation, rénovation ou dépannage&nbsp;: notre équipe intervient avec réactivité et exigence technique.
             </p>
 
             <!-- Badges -->
@@ -334,8 +335,9 @@
             Pourquoi choisir <span class="text-electric">Électricité Grappe</span> pour vos travaux électriques&nbsp;?
           </h2>
           <p class="text-sm sm:text-base text-slate-600 mb-6">
-            Nous accompagnons particuliers et professionnels pour tous leurs projets électriques,
-            avec des engagements clairs : sécurité, conseils techniques et respect des délais.
+            Basée à Champagnole, Électricité Grappe accompagne particuliers et professionnels pour tous leurs projets&nbsp;:
+            création d’installation dans une maison neuve, rénovation complète d’un appartement ou simple prise défectueuse à réparer.
+            Nous vous guidons vers des solutions fiables, performantes et conformes aux normes en vigueur.
           </p>
 
           <dl class="space-y-4">
@@ -465,7 +467,8 @@
             Contact & zone d’intervention
           </h2>
           <p class="text-sm sm:text-base text-slate-600 mb-6">
-            Nous intervenons rapidement sur [Ville] et alentours pour tous vos besoins en électricité générale.
+            Nous intervenons rapidement à Champagnole et dans les communes voisines pour tous vos besoins en électricité générale,
+            du simple dépannage au projet de rénovation globale.
           </p>
 
           <div class="space-y-4 text-sm">
@@ -590,9 +593,9 @@
         <div>
           <h3 class="text-xs font-semibold tracking-wide uppercase text-slate-400 mb-3">Zone d’intervention</h3>
           <p class="text-xs sm:text-sm text-slate-300">
-            [Ville] et agglomération<br />
-            [Ville 2] – [Ville 3] – [Ville 4]<br />
-            Rayon d’environ 30 km.
+            Champagnole et agglomération<br />
+            Arbois – Poligny – Lons-le-Saunier<br />
+            Rayon d’environ 30&nbsp;km.
           </p>
         </div>
 
