Orient site vers clientele industrielle

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Électricité Grappe – Électricien de Confiance</title>
+  <title>Électricité Grappe – Installations électriques industrielles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Entreprise d'électricité générale : installation, rénovation, dépannage 7j/7. Électriciens qualifiés, interventions rapides et sécurisées." />
+  <meta name="description" content="Spécialiste des installations électriques industrielles et tertiaires à Champagnole : postes de transformation, armoires de puissance, automatismes, maintenance et dépannage 7j/7." />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -55,8 +55,8 @@
     .hero-bg {
       position: relative;
       background-image:
-        linear-gradient(120deg, rgba(0, 18, 51, 0.85), rgba(0, 18, 51, 0.65)),
-        url("https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=1600&q=80");
+        linear-gradient(120deg, rgba(0, 18, 51, 0.88), rgba(0, 18, 51, 0.72)),
+        url("https://images.unsplash.com/photo-1581090700227-1e37b190418e?auto=format&fit=crop&w=1600&q=80");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -144,15 +144,15 @@
           <!-- Text -->
           <div>
             <p class="text-sm uppercase tracking-[0.25em] text-safety mb-3 font-semibold">
-              Électriciens qualifiés – Interventions sécurisées
+              Installations industrielles • Tertiaire • Process
             </p>
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold leading-tight mb-4">
-              Votre installateur électrique de confiance à <span class="text-safety">Champagnole</span>
+              Votre partenaire électricité industrielle à <span class="text-safety">Champagnole</span>
             </h1>
             <p class="text-base sm:text-lg text-slate-100 max-w-xl mb-6">
-              Pour garantir les performances optimales et la sécurité de votre installation électrique,
-              Électricité Grappe vous conseille des solutions sur mesure, adaptées à votre habitation ou à vos locaux professionnels.
-              Installation, rénovation ou dépannage&nbsp;: notre équipe intervient avec réactivité et exigence technique.
+              Électricité Grappe conçoit, installe et maintient vos infrastructures électriques industrielles et tertiaires :
+              postes de transformation, armoires de puissance, réseaux tri‑phasés, automatismes et éclairage technique.
+              Nous sécurisons vos lignes de production et vos bâtiments en garantissant disponibilité et conformité aux normes.
             </p>
 
             <!-- Badges -->
@@ -184,8 +184,8 @@
 
             <!-- Secondary info -->
             <p class="text-xs sm:text-sm text-slate-200">
-              <i class="fa-solid fa-clock me-1 text-safety"></i> Dépannage d'urgence en moins de 2h (selon secteur) –
-              <i class="fa-solid fa-location-dot mx-1 text-safety"></i> Intervention sur [Zone d'intervention].
+              <i class="fa-solid fa-clock me-1 text-safety"></i> Maintenance préventive & curative – astreinte dépannage 7j/7 (selon contrat) –
+              <i class="fa-solid fa-location-dot mx-1 text-safety"></i> Ateliers, usines et entrepôts sur Champagnole et Jura.
             </p>
           </div>
 
@@ -199,15 +199,15 @@
               <ul class="space-y-3 text-sm text-slate-100 mb-5">
                 <li class="flex gap-3">
                   <i class="fa-solid fa-check mt-1 text-safety"></i>
-                  <span>Dépannage 7j/7 : coupure de courant, court-circuit, disjoncteur qui saute.</span>
+              <span>Dépannage 7j/7 : défauts d&apos;alimentation, disjonctions répétées, arrêts de lignes de production.</span>
                 </li>
                 <li class="flex gap-3">
                   <i class="fa-solid fa-check mt-1 text-safety"></i>
-                  <span>Installations neuves et rénovations complètes pour appartements, maisons et locaux pros.</span>
+                  <span>Installations neuves et rénovations complètes de bâtiments industriels, entrepôts, ateliers et locaux tertiaires.</span>
                 </li>
                 <li class="flex gap-3">
                   <i class="fa-solid fa-check mt-1 text-safety"></i>
-                  <span>Mise aux normes et sécurisation de tableaux électriques, chauffages, éclairages.</span>
+                  <span>Mise aux normes et sécurisation de postes, armoires de puissance, MCC, moteurs et éclairages techniques.</span>
                 </li>
               </ul>
               <div class="flex flex-col gap-3">
@@ -231,11 +231,11 @@
         <div class="flex flex-col md:flex-row md:items-end md:justify-between gap-4 mb-8">
           <div>
             <h2 class="text-2xl sm:text-3xl font-bold text-slate-900 mb-2">
-              Nos services d'électricité générale
+              Services d'électricité industrielle & tertiaire
             </h2>
             <p class="text-sm sm:text-base text-slate-600 max-w-2xl">
-              Des prestations complètes pour sécuriser et optimiser vos installations électriques,
-              que vous soyez particulier, professionnel ou industriel.
+              Des prestations complètes pour alimenter, piloter et sécuriser vos outils de production,
+              vos entrepôts logistiques et vos bâtiments tertiaires.
             </p>
           </div>
           <div class="text-xs sm:text-sm text-slate-500">
@@ -251,15 +251,15 @@
               <div class="w-10 h-10 rounded-md bg-electric/10 text-electric flex items-center justify-center mb-4">
                 <i class="fa-solid fa-shield-halved"></i>
               </div>
-              <h3 class="font-semibold text-slate-900 mb-2">Mise aux normes</h3>
+              <h3 class="font-semibold text-slate-900 mb-2">Mise aux normes et études de puissance</h3>
               <p class="text-sm text-slate-600 mb-3">
-                Diagnostic complet de vos installations et mise en conformité selon la norme NF C 15‑100
-                pour sécuriser votre habitation ou vos locaux.
+                Diagnostics d&apos;installations, sélectivité et calculs de courants de court‑circuit.
+                Mise en conformité NF C 15‑100 / NF C 13‑200 pour vos ateliers, racks et locaux techniques.
               </p>
               <ul class="mt-auto text-xs text-slate-500 space-y-1">
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Tableaux électriques</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Mise à la terre</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Protection différentielle</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Tableaux & armoires de distribution</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Mise à la terre & liaisons équipotentielles</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Protections différentielles & magnétothermiques</li>
               </ul>
             </div>
           </article>
@@ -270,15 +270,15 @@
               <div class="w-10 h-10 rounded-md bg-electric/10 text-electric flex items-center justify-center mb-4">
                 <i class="fa-solid fa-bolt"></i>
               </div>
-              <h3 class="font-semibold text-slate-900 mb-2">Dépannage</h3>
+              <h3 class="font-semibold text-slate-900 mb-2">Maintenance & dépannage industriel</h3>
               <p class="text-sm text-slate-600 mb-3">
-                Recherche de panne, réparation de courts-circuits, réarmement de disjoncteurs,
-                sécurisation après sinistre ou dégât des eaux.
+                Recherche de défauts sur lignes tri‑phasées, armoires de commande, variateurs et automatismes.
+                Remise en service rapide de vos chaînes de production et équipements.
               </p>
               <ul class="mt-auto text-xs text-slate-500 space-y-1">
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Urgences 7j/7</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Localisation de défauts</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Remise en service sécurisée</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Astreintes possibles selon contrat</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Mesures & contrôles avant redémarrage</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Plans de maintenance préventive</li>
               </ul>
             </div>
           </article>
@@ -289,15 +289,15 @@
               <div class="w-10 h-10 rounded-md bg-electric/10 text-electric flex items-center justify-center mb-4">
                 <i class="fa-solid fa-house-signal"></i>
               </div>
-              <h3 class="font-semibold text-slate-900 mb-2">Domotique</h3>
+              <h3 class="font-semibold text-slate-900 mb-2">Supervision & bâtiments connectés</h3>
               <p class="text-sm text-slate-600 mb-3">
-                Installation de solutions connectées pour piloter éclairages, volets roulants, chauffage
-                et sécurité depuis votre smartphone.
+                Solutions de gestion technique du bâtiment (GTB / GTC), scénarios d&apos;éclairage,
+                pilotage d&apos;énergie et confort pour bureaux, sites logistiques et sites multi‑bâtiments.
               </p>
               <ul class="mt-auto text-xs text-slate-500 space-y-1">
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Scénarios d’éclairage</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Gestion d’énergie</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Solutions filaires & radio</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Gestion d&apos;éclairage par zone</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Suivi des consommations</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Automates & bus de terrain</li>
               </ul>
             </div>
           </article>
@@ -308,15 +308,15 @@
               <div class="w-10 h-10 rounded-md bg-electric/10 text-electric flex items-center justify-center mb-4">
                 <i class="fa-solid fa-industry"></i>
               </div>
-              <h3 class="font-semibold text-slate-900 mb-2">Installation industrielle</h3>
+              <h3 class="font-semibold text-slate-900 mb-2">Installations industrielles complètes</h3>
               <p class="text-sm text-slate-600 mb-3">
-                Réseaux électriques pour ateliers, entrepôts, commerces et bureaux. Études de charge
-                et dimensionnement des protections.
+                Conception et réalisation d&apos;alimentation d&apos;ateliers, lignes de production,
+                entrepôts logistiques et locaux techniques haute criticité.
               </p>
               <ul class="mt-auto text-xs text-slate-500 space-y-1">
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Tableaux tri-phasés</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Éclairage technique</li>
-                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Bornes de recharge & machines</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Postes de transformation & TGBT</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Lignes tri‑phasées & alimentation machines</li>
+                <li><i class="fa-solid fa-circle-check text-electric me-1"></i> Éclairage industriel & bornes de recharge</li>
               </ul>
             </div>
           </article>
@@ -335,9 +335,9 @@
             Pourquoi choisir <span class="text-electric">Électricité Grappe</span> pour vos travaux électriques&nbsp;?
           </h2>
           <p class="text-sm sm:text-base text-slate-600 mb-6">
-            Basée à Champagnole, Électricité Grappe accompagne particuliers et professionnels pour tous leurs projets&nbsp;:
-            création d’installation dans une maison neuve, rénovation complète d’un appartement ou simple prise défectueuse à réparer.
-            Nous vous guidons vers des solutions fiables, performantes et conformes aux normes en vigueur.
+            Basée à Champagnole, Électricité Grappe accompagne principalement les industriels, logisticiens et acteurs du tertiaire :
+            extensions d&apos;ateliers, création de nouvelles lignes, modernisation de postes et sécurisation de locaux techniques.
+            Nous vous guidons vers des solutions robustes, évolutives et conformes aux normes en vigueur.
           </p>
 
           <dl class="space-y-4">
@@ -405,8 +405,8 @@
         <div class="space-y-5">
           <div class="rounded-xl overflow-hidden shadow-md border border-slate-200">
             <img
-              src="https://images.unsplash.com/photo-1582719478171-2f2dfcdf9dbc?auto=format&fit=crop&w=1200&q=80"
-              alt="Électricien effectuant une installation électrique"
+              src="https://images.unsplash.com/photo-1581090700227-1e37b190418e?auto=format&fit=crop&w=1200&q=80"
+              alt="Tableaux électriques industriels dans un atelier de production"
               class="w-full h-56 md:h-64 object-cover"
               loading="lazy"
             />
@@ -467,8 +467,8 @@
             Contact & zone d’intervention
           </h2>
           <p class="text-sm sm:text-base text-slate-600 mb-6">
-            Nous intervenons rapidement à Champagnole et dans les communes voisines pour tous vos besoins en électricité générale,
-            du simple dépannage au projet de rénovation globale.
+            Nous intervenons rapidement sur vos sites de production, entrepôts et bâtiments tertiaires à Champagnole
+            et dans les communes voisines, pour la création, la modification ou la maintenance de vos installations.
           </p>
 
           <div class="space-y-4 text-sm">
@@ -476,7 +476,7 @@
               <i class="fa-solid fa-location-dot mt-1 text-electric"></i>
               <div>
                 <p class="font-semibold">Électricité Grappe – Électricité Générale</p>
-                <p class="text-slate-600">12 rue des Artisans<br />00000 [Ville, Région]</p>
+                <p class="text-slate-600">12 rue des Artisans<br />39300 Champagnole</p>
               </div>
             </div>
 
@@ -509,7 +509,7 @@
               <div>
                 <p class="font-semibold">Zone d’intervention</p>
                 <p class="text-slate-600">
-                  [Ville] centre, [Villes voisines], agglomération et secteur dans un rayon de 30 km.
+                  Champagnole, Arbois, Poligny, Lons-le-Saunier et zone industrielle dans un rayon de 30 km.
                 </p>
               </div>
             </div>
