Mise a jour infos contact GRAPPE PERE ET FILS et reduction rouge hero

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Électricité Grappe – Spécialiste Électricité Industrielle | Champagnole</title>
-  <meta name="description" content="Électricité Grappe : installations électriques industrielles, tableaux de puissance, automatismes, maintenance préventive. Expertise technique pour usines, ateliers et bâtiments industriels à Champagnole et région." />
+  <title>GRAPPE PERE ET FILS – Spécialiste Électricité Industrielle | Champagnole</title>
+  <meta name="description" content="GRAPPE PERE ET FILS : installations électriques industrielles, tableaux de puissance, automatismes, maintenance préventive. Expertise technique pour usines, ateliers et bâtiments industriels à Champagnole et région." />
   
   <!-- Preconnect pour performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,9 +29,9 @@
           <i class="fas fa-exclamation-triangle"></i>
           <span>Intervention d'urgence 24/7</span>
         </div>
-        <a href="tel:0750000000" class="phone-link">
+        <a href="tel:0384522125" class="phone-link">
           <i class="fas fa-phone-alt"></i>
-          <span>07 50 00 00 00</span>
+          <span>03 84 52 21 25</span>
         </a>
       </div>
     </div>
@@ -46,7 +46,7 @@
             <i class="fas fa-bolt"></i>
           </div>
           <div class="logo-text">
-            <span class="logo-name">ÉLECTRICITÉ GRAPPE</span>
+            <span class="logo-name">GRAPPE PERE ET FILS</span>
             <span class="logo-tagline">Électricité Industrielle</span>
           </div>
         </a>
@@ -87,7 +87,7 @@
             <span class="highlight-red">entre de bonnes mains</span>
           </h1>
           <p class="hero-description">
-            Électricité Grappe accompagne les entreprises industrielles dans leurs projets électriques :
+            GRAPPE PERE ET FILS accompagne les entreprises industrielles dans leurs projets électriques :
             installations de puissance, tableaux triphasés, automatismes, maintenance préventive et dépannage d'urgence.
             Expertise technique, réactivité et conformité aux normes.
           </p>
@@ -96,7 +96,7 @@
               <i class="fas fa-file-invoice"></i>
               <span>Demander un devis</span>
             </a>
-            <a href="tel:0750000000" class="btn btn-secondary">
+            <a href="tel:0384522125" class="btn btn-secondary">
               <i class="fas fa-phone"></i>
               <span>Appeler maintenant</span>
             </a>
@@ -237,10 +237,10 @@
         <div class="expertise-content">
           <div class="expertise-text">
             <span class="section-badge">Notre Expertise</span>
-            <h2 class="section-title">Pourquoi choisir Électricité Grappe ?</h2>
+            <h2 class="section-title">Pourquoi choisir GRAPPE PERE ET FILS ?</h2>
             <p class="expertise-intro">
               Forte de plus de 20 ans d'expérience dans l'électricité industrielle,
-              Électricité Grappe maîtrise tous les aspects techniques des installations électriques
+              GRAPPE PERE ET FILS maîtrise tous les aspects techniques des installations électriques
               pour entreprises, de la petite PME aux grands sites industriels.
             </p>
             
@@ -369,9 +369,9 @@
               <i class="fas fa-file-invoice"></i>
               <span>Demander un devis gratuit</span>
             </a>
-            <a href="tel:0750000000" class="btn btn-white btn-large">
+            <a href="tel:0384522125" class="btn btn-white btn-large">
               <i class="fas fa-phone"></i>
-              <span>07 50 00 00 00</span>
+              <span>03 84 52 21 25</span>
             </a>
           </div>
         </div>
@@ -397,7 +397,7 @@
               </div>
               <div class="contact-details">
                 <h3>Adresse</h3>
-                <p>12 rue des Artisans<br />39300 Champagnole</p>
+                <p>339 Rue sous Burgille<br />ZI La Planchette<br />39300 Champagnole</p>
               </div>
             </div>
 
@@ -407,7 +407,8 @@
               </div>
               <div class="contact-details">
                 <h3>Téléphone</h3>
-                <p><a href="tel:0750000000">07 50 00 00 00</a></p>
+                <p><a href="tel:0384522125">03 84 52 21 25</a></p>
+                <p style="margin-top: 0.5rem; font-size: 0.875rem;"><strong>Fax :</strong> 03 84 52 00 47</p>
               </div>
             </div>
 
@@ -427,7 +428,7 @@
               </div>
               <div class="contact-details">
                 <h3>Horaires</h3>
-                <p>Lundi - Vendredi : 8h00 - 18h00<br />Urgences : 24/7</p>
+                <p>Lundi - Vendredi : 7h30 - 11h30 et 13h30 - 17h30</p>
               </div>
             </div>
 
@@ -440,7 +441,7 @@
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
-                title="Localisation Électricité Grappe"
+                title="Localisation GRAPPE PERE ET FILS"
               ></iframe>
             </div>
           </div>
@@ -514,7 +515,7 @@
               <i class="fas fa-bolt"></i>
             </div>
             <div class="logo-text">
-              <span class="logo-name">ÉLECTRICITÉ GRAPPE</span>
+              <span class="logo-name">GRAPPE PERE ET FILS</span>
               <span class="logo-tagline">Électricité Industrielle</span>
             </div>
           </div>
@@ -548,15 +549,16 @@
         <div class="footer-section">
           <h3>Contact</h3>
           <ul class="footer-contact">
-            <li><i class="fas fa-map-marker-alt"></i> 12 rue des Artisans, 39300 Champagnole</li>
-            <li><i class="fas fa-phone-alt"></i> <a href="tel:0750000000">07 50 00 00 00</a></li>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:contact@electricitegrappe.fr">contact@electricitegrappe.fr</a></li>
+            <li><i class="fas fa-map-marker-alt"></i> 339 Rue sous Burgille, ZI La Planchette, 39300 Champagnole</li>
+            <li><i class="fas fa-phone-alt"></i> <a href="tel:0384522125">03 84 52 21 25</a></li>
+            <li><i class="fas fa-fax"></i> 03 84 52 00 47</li>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:contact@grappe-pere-et-fils.fr">contact@grappe-pere-et-fils.fr</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; <span id="currentYear"></span> Électricité Grappe. Tous droits réservés.</p>
+        <p>&copy; <span id="currentYear"></span> GRAPPE PERE ET FILS. Tous droits réservés.</p>
         <div class="footer-legal">
           <a href="#">Mentions légales</a>
           <span>|</span>
