Correction stats hero

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
             </div>
             <div class="stat-item">
               <span class="stat-number">500+</span>
-              <span class="stat-label">Projets industriels</span>
+              <span class="stat-label">Projets réalisés</span>
             </div>
             <div class="stat-item">
-              <span class="stat-number">20+</span>
-              <span class="stat-label">Années d'expérience</span>
+              <span class="stat-number">100%</span>
+              <span class="stat-label">Satisfaction client</span>
             </div>
           </div>
         </div>
