Mise a jour email contact vers egia.grappe@wanadoo.fr

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               </div>
               <div class="contact-details">
                 <h3>Email</h3>
-                <p><a href="mailto:contact@electricitegrappe.fr">contact@electricitegrappe.fr</a></p>
+                <p><a href="mailto:egia.grappe@wanadoo.fr">egia.grappe@wanadoo.fr</a></p>
               </div>
             </div>
 
@@ -552,7 +552,7 @@
             <li><i class="fas fa-map-marker-alt"></i> 339 Rue sous Burgille, ZI La Planchette, 39300 Champagnole</li>
             <li><i class="fas fa-phone-alt"></i> <a href="tel:0384522125">03 84 52 21 25</a></li>
             <li><i class="fas fa-fax"></i> 03 84 52 00 47</li>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:contact@grappe-pere-et-fils.fr">contact@grappe-pere-et-fils.fr</a></li>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:egia.grappe@wanadoo.fr">egia.grappe@wanadoo.fr</a></li>
           </ul>
         </div>
       </div>
