--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GRAPPE PERE ET FILS – Spécialiste Électricité Industrielle | Champagnole</title>
-  <meta name="description" content="GRAPPE PERE ET FILS : installations électriques industrielles, tableaux de puissance, automatismes, maintenance préventive. Expertise technique pour usines, ateliers et bâtiments industriels à Champagnole et région." />
+  <title>GRAPPE PERE ET FILS – Votre installateur électrique à Champagnole</title>
+  <meta name="description" content="GRAPPE PERE ET FILS, votre installateur électrique à Champagnole : études et installations, maintenance, diagnostics et mise aux normes pour ateliers, entreprises et habitats." />
+  <meta name="keywords" content="Grappe, électricien Champagnole, installateur électrique, électricité industrielle, tableaux électriques, maintenance, diagnostic électrique" />
+  <meta name="robots" content="index,follow" />
+  <meta name="format-detection" content="telephone=no" />
+  <link rel="canonical" href="https://www.egiagrappe.fr/" />
+  <meta property="og:type" content="business.business" />
+  <meta property="og:url" content="https://www.egiagrappe.fr/" />
+  <meta property="og:title" content="GRAPPE PERE ET FILS – Votre installateur électrique à Champagnole" />
+  <meta property="og:description" content="GRAPPE PERE ET FILS, entreprise familiale à Champagnole, réalise vos installations électriques, diagnostics, mises aux normes et maintenance." />
+  <meta property="business:contact_data:country_name" content="France" />
   
   <!-- Preconnect pour performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -59,9 +68,10 @@
         
         <ul class="nav-menu" id="navMenu">
           <li><a href="#hero" class="nav-link">Accueil</a></li>
-          <li><a href="#services" class="nav-link">Services</a></li>
-          <li><a href="#expertise" class="nav-link">Expertise</a></li>
-          <li><a href="#realisations" class="nav-link">Réalisations</a></li>
+          <li><a href="#expertise" class="nav-link">L'entreprise</a></li>
+          <li><a href="#services" class="nav-link">Nos prestations</a></li>
+          <li><a href="#realisations" class="nav-link">Nos services</a></li>
+          <li><a href="#plan-acces" class="nav-link">Plan d'accès</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
           <li><a href="#contact" class="nav-link btn-nav">Devis gratuit</a></li>
         </ul>
@@ -432,7 +442,7 @@
               </div>
             </div>
 
-            <div class="contact-map">
+            <div class="contact-map" id="plan-acces">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2760.123456789!2d5.9123456!3d46.7890123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDbCsDQ3JzIwLjQiTiA1wrA1NCc0NC40IkU!5e0!3m2!1sfr!2sfr!4v1234567890123!5m2!1sfr!2sfr"
                 width="100%"
